Fixed stat chart z-index

--- a/viewer/styles.css
+++ b/viewer/styles.css
@@ -280,5 +280,4 @@ H1 {
   display: block;
   margin-top: 20px;
   margin-bottom: 20px;
-  z-index: 500;
 }
